--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/static/style.css" />
+
     <title>Document</title>
   </head>
   <body>
     {% include 'navbar.html' %}
-    <section>
-      <h1 class="title">Users</h1>
-      <a href="/users/new"><button id="add-button">Add user</button></a>
+    <section class="user-section">
+      <div class="user-header">
+        <h1 class="title">Users</h1>
+        <a href="/users/new"><button id="add-button">Add user</button></a>
+      </div>
       <ul>
         {% for user in users %}
         <li>
